# Cata2Data

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  adaptive_manipulation_example.ipynb  cata2data.py  environment.yml  example.ipynb  preprocessing.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: build.yaml  build_base_container.yaml  build_latest_container.yaml  install_and_test.yaml  publishpypi.yaml  testpypi.yaml
examples/lotssdr2/: Create_LoTTSDataset.ipynb  README.md  catalog_splitter.py  data.py  data_scrapper.py  requirements.txt
src/cata2data/: __init__.py  cata2data.py  utils.py
src/cata2data/preprocessing/: __init__.py  preprocessing.py
tests/: test_preprocessing.py  test_utils.py
