[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=70.0.0", "setuptools-scm", "wheel"]

[project]
authors = [
  {name = "Micah Bowles", email = "micah.bowles@postgrad.manchester.ac.uk"}
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU GPLv3",
  "Operating System :: OS Independent"
]
dependencies = [
  "astropy==5.2.1",
  "beautifulsoup4",
  "matplotlib==3.6.3",
  "numpy==1.24.2",
  "pandas==1.5.3",
  "regions==0.7",
  "requests",
  "spectral-cube==0.6.0",
  "tqdm",
  "torch",
  "torchvision",
]
description = "Produce a loadable data set from a catalogue"
dynamic = ["version"]
license = {file = "LICENSE"}
maintainers = [
  {name = "Micah Bowles", email = "micah.bowles@postgrad.manchester.ac.uk"}
]
name = "cata2data"
readme = "README.md"
requires-python = ">=3.9"

[project.urls]
Source = "https://github.com/mbowles/cata2data"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["cata2data*"]
namespaces = false
where = ["src"]

[tool.setuptools_scm]
local_scheme = "no-local-version"
write_to = "src/cata2data/_version.py"
